--- a/Services.html
+++ b/Services.html
@@ -90,7 +90,7 @@
                         <div id="file-info"></div>
                         <!-- Botón para analizar, inicialmente deshabilitado -->
                         <a href="index.html">
-                           <button class="get_now" id="analyze-btn" disabled>Analizar</button>
+                           <a class="get_now" id="analyze-btn" href="Graficos.html" disabled>Analizar</a>
                          </a>
                                              
                         <script>
@@ -132,4 +132,3 @@
       </script>
    </body>
 </html>
-
